# python-fastpi-demo

./: .dockerignore  .gitignore  LICENSE  Makefile  PingApp.gocd.yaml  README.md  docker-compose.override-example.yml  docker-compose.yml  pyproject.toml  test.sh
k8s/: deployment.yml
project/: Dockerfile  requirements.txt
project/app/: config.py  main.py
project/tests/: conftest.py  test_ping.py
