[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = "Flask TDD Docker"
authors = ["DNyambudzi"]
readme = "README.md"
packages = [{include = "tdd_flask_docker"}]

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "0.85.1"
uvicorn = "0.19.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pylint = "^2.15.8"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
